# crc16

./: CMakeLists.txt  README.md  crc16.c  crc16.h
